--- a/public/scan-spec-google.html
+++ b/public/scan-spec-google.html
@@ -363,6 +363,15 @@
   document.addEventListener('DOMContentLoaded', ensureCsrf);
 
   // --- Helpers ---
+  async function waitVideoSize(timeoutMs = 2000){
+    const t0 = performance.now();
+    while(performance.now() - t0 < timeoutMs){
+      if(D.video.videoWidth > 0 && D.video.videoHeight > 0) return true;
+      await new Promise(r => requestAnimationFrame(r));
+    }
+    return false;
+  }
+
   function esc(s){ return String(s??'').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c])); }
   function dieKey(bn,wc){ return (bn||'').toLowerCase()+'@@'+(wc||'').toLowerCase(); }
   function normHyphen(s){ return (s||'').replace(/[‐-‒–—―ー−]/g,'-').trim(); }
@@ -380,6 +389,14 @@
     D.overlay.style.height = '100%';
     D.freeze.width = D.video.videoWidth;
     D.freeze.height = D.video.videoHeight;
+  }
+  async function waitVideoSize(timeoutMs = 2000){
+    const t0 = performance.now();
+    while(performance.now() - t0 < timeoutMs){
+      if(D.video.videoWidth > 0 && D.video.videoHeight > 0) return true;
+      await new Promise(r => requestAnimationFrame(r));
+    }
+    return false;
   }
 
   // --- Camera Control ---
@@ -422,7 +439,16 @@
       });
       D.video.srcObject=S.stream;
       await D.video.play();
-      
+      // ★追加：最初の1回だけ、解像度が確定するまで待つ
+      await waitVideoSize();
+
+      // ここから先で canvas サイズを確定させる
+      fitOverlay();
+      D.scanCanvas.width  = D.video.videoWidth;
+      D.scanCanvas.height = D.video.videoHeight;
+
+      setStatus('スキャン中', true);
+      tick();
       D.btnStart.disabled=true;
       D.btnStop.disabled=false;
       
@@ -454,7 +480,7 @@
       setStatus('エラー');
     }
   }
-
+  
   function freezeAndLock(){
     fitOverlay();
     freezeCtx.drawImage(D.video,0,0,D.freeze.width,D.freeze.height);
